--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ scikit-learn>=1.0.0
 openpyxl>=3.0.0
 redshift-connector>=2.0.0
 seaborn>=0.11.0
+msoffcrypto-tool>=5.0.0
+pyAesCrypt>=6.0.0
+pywin32>=306
